--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         "fideloper/proxy": "^4.0",
         "hhxsv5/laravel-s": "~3.5.0",
         "laravel/framework": "5.8.*",
-        "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
         "overtrue/wechat": "~4.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "tymon/jwt-auth": "1.*@rc"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
